--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,41 @@
-Flask==0.11.1
-Flask-RESTful==0.3.5
-Jinja2==2.8
-MarkupSafe==0.23
-SQLAlchemy==1.1.4
-Werkzeug==0.11.11
-aniso8601==1.2.0
-argparse==1.2.1
+alabaster==0.7.9
+alembic==0.8.10
+Babel==2.3.4
 click==6.6
+configobj==5.0.6
+decorator==4.0.11
+docutils==0.13.1
+enum==0.4.6
+Flask==0.11.1
+Flask-SQLAlchemy==2.1
+Foundations==2.1.0
+imagesize==0.7.1
 itsdangerous==0.24
+Jinja2==2.8
+linecache2==1.0.0
+Mako==1.0.6
+Manager==2.0.5
+MarkupSafe==0.23
+migrate==0.3.8
+Oncilla==0.1.0
+pbr==1.10.0
+pkg-resources==0.0.0
+Pygments==2.1.3
 pyTelegramBotAPI==2.3.0
-python-dateutil==2.6.0
+python-editor==1.0.3
 pytz==2016.10
-requests==2.7.0
+requests==2.12.4
 shortuuid==0.4.3
 six==1.10.0
-telebot==0.0.3
-wsgiref==0.1.2
+snowballstemmer==1.2.1
+Sphinx==1.5.1
+sphinx-rtd-theme==0.1.9
+SQLAlchemy==1.1.4
+sqlalchemy-migrate==0.10.0
+sqlparse==0.2.2
+Tempita==0.5.2
+traceback2==1.4.0
+transaction==2.0.3
+unittest2==1.1.0
+Werkzeug==0.11.11
+zope.interface==4.3.3
