--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+alembic==0.9.6
 configobj==5.0.6
-pkg-resources==0.0.0
+decorator==4.1.2
 pyTelegramBotAPI==3.2.1
+python-dateutil==2.6.1
 requests==2.7.0
 shortuuid==0.5.0
+simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.1.14
+traitlets==4.3.2
