--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
 alembic==0.9.6
+click==6.7
 configobj==5.0.6
 decorator==4.1.2
+Flask==0.12.2
+gunicorn==19.7.1
+ipython-genutils==0.2.0
+itsdangerous==0.24
+Jinja2==2.9.6
+Mako==1.0.7
+MarkupSafe==1.0
+pkg-resources==0.0.0
 pyTelegramBotAPI==3.2.1
 python-dateutil==2.6.1
+python-editor==1.0.3
 requests==2.7.0
 shortuuid==0.5.0
 simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.1.14
 traitlets==4.3.2
+Werkzeug==0.12.2
