--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pkg-resources==0.0.0
 pyTelegramBotAPI==3.2.1
 python-dateutil==2.6.1
 python-editor==1.0.3
+redis==2.10.6
 requests==2.7.0
 shortuuid==0.5.0
 simplegeneric==0.8.1
