--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 alembic==0.9.6
+amqp==2.2.2
+billiard==3.5.0.3
+celery==4.1.0
 click==6.7
 configobj==5.0.6
 decorator==4.1.2
@@ -7,12 +10,14 @@ gunicorn==19.7.1
 ipython-genutils==0.2.0
 itsdangerous==0.24
 Jinja2==2.9.6
+kombu==4.1.0
 Mako==1.0.7
 MarkupSafe==1.0
 pkg-resources==0.0.0
 pyTelegramBotAPI==3.2.1
 python-dateutil==2.6.1
 python-editor==1.0.3
+pytz==2017.3
 redis==2.10.6
 requests==2.7.0
 shortuuid==0.5.0
@@ -20,4 +25,5 @@ simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.1.14
 traitlets==4.3.2
+vine==1.1.4
 Werkzeug==0.12.2
