--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,21 @@ configobj==5.0.6
 decorator==4.1.2
 Flask==0.12.2
 gunicorn==19.7.1
+ipython==6.2.1
 ipython-genutils==0.2.0
 itsdangerous==0.24
+jedi==0.11.1
 Jinja2==2.9.6
 kombu==4.1.0
 Mako==1.0.7
 MarkupSafe==1.0
+parso==0.1.1
+pexpect==4.3.1
+pickleshare==0.7.4
 pkg-resources==0.0.0
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
 pyTelegramBotAPI==3.2.1
 python-dateutil==2.6.1
 python-editor==1.0.3
@@ -26,4 +34,5 @@ six==1.11.0
 SQLAlchemy==1.1.14
 traitlets==4.3.2
 vine==1.1.4
+wcwidth==0.1.7
 Werkzeug==0.12.2
