celery and postresql

--- a/alembic.ini
+++ b/alembic.ini
@@ -35,8 +35,9 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = sqlite:///bot.db
+#sqlalchemy.url = driver://user:pass@localhost/dbname
+#sqlalchemy.url = sqlite:///bot.db
+sqlalchemy.url = postgresql://ozzi_user:rjvcjvjkmcrfz@62.109.13.25:5432/ozzibot
 # Logging configuration
 [loggers]
 keys = root,sqlalchemy,alembic
