--- a/alembic.ini
+++ b/alembic.ini
@@ -37,7 +37,8 @@ script_location = alembic
 
 #sqlalchemy.url = driver://user:pass@localhost/dbname
 #sqlalchemy.url = sqlite:///bot.db
-sqlalchemy.url = postgresql://ozzi_user:rjvcjvjkmcrfz@62.109.13.25:5432/ozzibot
+#sqlalchemy.url = postgresql://ozzi_user:rjvcjvjkmcrfz@62.109.13.25:5432/ozzibot
+sqlalchemy.url = postgresql://ozzi_user:rjvcjvjkmcrfz@localhost:5432/ozzibot
 # Logging configuration
 [loggers]
 keys = root,sqlalchemy,alembic
