--- a/alembic.ini
+++ b/alembic.ini
@@ -35,13 +35,10 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-#sqlalchemy.url = driver://user:pass@localhost/dbname
-#sqlalchemy.url = sqlite:///bot.db
-#sqlalchemy.url = postgresql://ozzi_user:rjvcjvjkmcrfz@62.109.13.25:5432/ozzibot
 sqlalchemy.url = postgresql://ozzi_user:rjvcjvjkmcrfz@localhost:5432/ozzibot
 # Logging configuration
 [loggers]
-keys = root,sqlalchemy,alembic
+keys = root, sqlalchemy, alembic
 
 [handlers]
 keys = console
@@ -50,12 +47,12 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARN
+level = INFO
 handlers = console
 qualname =
 
 [logger_sqlalchemy]
-level = DEBUG
+level = INFO
 handlers =
 qualname = sqlalchemy.engine
 
@@ -67,7 +64,7 @@ qualname = alembic
 [handler_console]
 class = StreamHandler
 args = (sys.stderr,)
-level = NOTSET
+level = INFO
 formatter = generic
 
 [formatter_generic]
