--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://ozzi_user:rjvcjvjkmcrfz@localhost:5432/ozzibot
+sqlalchemy.url = postgresql://ozzi:Iy7ruECULX0h@localhost:5432/ozzi_db
 # Logging configuration
 [loggers]
 keys = root, sqlalchemy, alembic
