--- a/alembic.ini
+++ b/alembic.ini
@@ -34,7 +34,7 @@ script_location = alembic
 # the output encoding used when revision files
 # are written from script.py.mako
 # output_encoding = utf-8
-
+## TODO вынести в конфиг
 sqlalchemy.url = postgresql://ozzi:Iy7ruECULX0h@localhost:5432/ozzi_db
 # Logging configuration
 [loggers]
